[package]
name = "ansee"
version = "0.1.3"
edition = "2021"
authors = ["Felipe Coury <felipe.coury@gmail.com"]
license = "MIT"
description = "ANSI escaped text to image CLI tool and Rust library"
repository = "https://github.com/codersauce/ansee"
keywords = ["ansi", "image", "text2image", "cli", "tool"]
categories = ["command-line-utilities", "graphics", "rendering", "text-processing"]
readme = "README.md"

[dependencies]
ab_glyph = "0.2.29"
ansi-parser = "0.9.1"
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
dafont = "0.1.1"
font-kit = "0.14.2"
image = "0.25.5"
imageproc = "0.25.0"
lazy_static = "1.5.0"
